# hothunter

./: .gitignore  CHANGELOG.md  DESIGN_SPEC.md  LICENSE  README.md  hotspot_app.py  plan.md  pyproject.toml  requirements.txt  sources.example.json
docs/: BUILD_ENV.md  CUSTOM_SOURCES.md  PLATFORMS.md
docs/prototype/: index.html
scripts/: generate_icon.py  onekey_env.sh  onekey_start.sh  pinned_build_env.sh
scripts/gradle/: aliyun-init.gradle
src/: __init__.py  config.py  main.py  models.py  modes.py
src/analysis/: __init__.py  word_freq.py
src/crawler/: __init__.py  baidu.py  baidu_hot.py  base.py  bilibili.py  custom_sources.py  douyin.py  kr36.py  netease.py  registry.py  tencent.py  tieba.py  toutiao.py  weibo.py  xiaohongshu.py  zhihu.py
src/storage/: __init__.py  db.py  export.py
src/ui/: __init__.py  app.py  article_reader.py  components.py  nav_chrome.py  theme.py
src/utils/: article_content.py  article_view.py  hot_sort.py  refresh_scheduler.py
tests/: test_article_content.py  test_article_view.py  test_crawlers_parse.py  test_custom_sources.py  test_export.py  test_hot_sort.py  test_modes.py  test_nav_chrome.py  test_refresh_scheduler.py  test_theme.py  test_word_freq.py
